# affinitypool

./: BENCHMARKS.md  CHANGELOG.md  Cargo.toml  README.md  comparison.sh  release.toml  run_benchmarks.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benches/: high_load.rs  microbench.rs  threadpool.rs  threadpool_benchmarks.rs  vs_blocking.rs  vs_rayon.rs  vs_threadpool.rs  vs_tokio.rs
examples/: alloc_count.rs
src/: affinity.rs  atomic_waker.rs  builder.rs  cpu.rs  data.rs  error.rs  global.rs  job.rs  lib.rs  local.rs  queue.rs  sentry.rs  spawn.rs  task.rs
src/affinity/: freebsd.rs  linux.rs  macos.rs  mod.rs  windows.rs
tests/: async_task_smoke.rs  loom.rs  loom_queue.rs  miri.rs  threadpool_tests.rs  unsound.rs
